--- a/Blogging/Templets/Registration.html
+++ b/Blogging/Templets/Registration.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{% static 'static/css/style.css' %}">
+    <link rel="stylesheet" href="static/css/style.css">
     <title>Document</title>
 </head>
 <body>
+    <center>
     <form class="form">
         <p class="title">Register </p>
         <p class="message">Signup now and get full access to our app. </p>
@@ -36,6 +40,6 @@
         </label>
         <button class="submit">Submit</button>
         <p class="signin">Already have an acount ? <a href="#">Signin</a> </p>
-    </form>
+    </form></center>
 </body>
 </html>
