--- a/Blogging/Templets/Registration.html
+++ b/Blogging/Templets/Registration.html
@@ -37,7 +37,7 @@
     >
       <div style="padding: 100px">
         {% if user.is_authenticated %}
-        <a href="{% url 'logout' %}">Logout</a>
+        <a href="/logout/">Logout</a>
         {% endif %}
         <form class="form" method="post">
           {% csrf_token %}
