--- a/Blogging/Templets/home.html
+++ b/Blogging/Templets/home.html
@@ -39,6 +39,7 @@
                 {% else %}
                 <!-- User is not authenticated -->
                 <li><a href="Login/">Login</a></li>
+                <li><a href="Registration/">Registration</a></li>
                 {% endif %}
                 <!-- <i class="fa fa-search" aria-hidden="true"></i> -->
               </ul>
