--- a/Blogging/Templets/index.html
+++ b/Blogging/Templets/index.html
@@ -65,6 +65,7 @@
                         <h6 class="collapse-header">Login Screens:</h6>
                         <a class="collapse-item" href="/Login/">Login</a>
                         <a class="collapse-item" href="/Registraion/">Register</a>
+                        <a class="collapse-item" href="/restricted/">Form</a>
                         {% comment %} <a class="collapse-item" href="forgot-password.html">Forgot Password</a> {% endcomment %}
                         <div class="collapse-divider"></div>
                         {% comment %} <h6 class="collapse-header">Other Pages:</h6>
