--- a/Blogging/Templets/restaurant.html
+++ b/Blogging/Templets/restaurant.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-
+{% load static %}
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -22,7 +22,7 @@
   </center>
   <div class="container"
     style="border: 0px solid black; width: 80%; margin-top: 120px; background-color: rgb(255, 255, 255);">
-    <center><img src="1135-AD-Restaurant-Jaipur-Rajasthan.webp" width="700px " style="margin-top: 20px;">></center>
+    <center><img src="{% static 'img/1135-AD-Restaurant-Jaipur-Rajasthan.webp' %}" width="700px " style="margin-top: 20px;">></center>
     <center>
       <h1>FLAVORS FOR ROYALTY</h1>
       <p style="width: 800px; font-family: 'Kelvinch',sans-serif;">Named after the year when the ruling dynasty came to
@@ -53,7 +53,7 @@
 
     <center>
       <div class="container" style="border: 0px solid black;">
-        <center><img src="Bomras-Restaurant-Goa.webp" width="700px " style="margin-top: 20px;">></center>
+        <center><img src="{% static 'Bomras-Restaurant-Goa.webp' %}" width="700px " style="margin-top: 20px;">></center>
         <H1>FOODIES WELCOME HERE</H1>
         <p style="width: 800px; font-family: 'Kelvinch',sans-serif;">Bomra’s restaurant serves as the most casual
           dining restaurant that serves delicious Goan and Burmese cuisines.
@@ -107,7 +107,7 @@
 
           <center>
             <div class="container" style="border: 0px solid black;">
-              <center><img src="Agashiye-Restaurant-Ahmedabad-Gujarat.webp" width="700px " style="margin-top: 20px;">>
+              <center><img src="static/img/Agashiye-Restaurant-Ahmedabad-Gujarat.webp" width="700px " style="margin-top: 20px;">>
               </center>
               <H1>FOOD THAT MAKES YOU SAY WOW</H1>
               <p style="width: 800px; font-family: 'Kelvinch',sans-serif;">India seems to be a perfect
