--- a/Blogging/Templets/restaurant.html
+++ b/Blogging/Templets/restaurant.html
@@ -22,7 +22,7 @@
   </center>
   <div class="container"
     style="border: 0px solid black; width: 80%; margin-top: 120px; background-color: rgb(255, 255, 255);">
-    <center><img src="{% static 'img/1135-AD-Restaurant-Jaipur-Rajasthan.webp' %}" width="700px " style="margin-top: 20px;">></center>
+    <center><img src="{% static 'img/1.webp' %}" width="700px " style="margin-top: 20px;">></center>
     <center>
       <h1>FLAVORS FOR ROYALTY</h1>
       <p style="width: 800px; font-family: 'Kelvinch',sans-serif;">Named after the year when the ruling dynasty came to
@@ -53,7 +53,7 @@
 
     <center>
       <div class="container" style="border: 0px solid black;">
-        <center><img src="{% static 'Bomras-Restaurant-Goa.webp' %}" width="700px " style="margin-top: 20px;">></center>
+        <center><img src="{% static '2.webp' %}" width="700px " style="margin-top: 20px;">></center>
         <H1>FOODIES WELCOME HERE</H1>
         <p style="width: 800px; font-family: 'Kelvinch',sans-serif;">Bomra’s restaurant serves as the most casual
           dining restaurant that serves delicious Goan and Burmese cuisines.
@@ -71,7 +71,7 @@
 
       <center>
         <div class="container" style="border: 0px solid black;">
-          <center><img src="1559-AD-Restaurant-Udaipur-Rajasthan.webp" width="700px " style="margin-top: 20px;">
+          <center><img src="{% static 'img/3.webp' %}" width="700px " style="margin-top: 20px;">
           </center>
           <H1>SOMETHING HOT : SOMETHING TASTY</H1>
           <p style="width: 800px; font-family: 'Kelvinch',sans-serif;">Are you a food lover? For food lovers,
@@ -93,7 +93,7 @@
 
         <center>
           <div class="container" style="border: 0px solid black;">
-            <center><img src="Aish-Restaurant-Hyderabad.webp" width="700px " style="margin-top: 20px;">></center>
+            <center><img src="{% static 'img/4.webp' %}" width="700px " style="margin-top: 20px;">></center>
             <H1>GOOD FOOD : GOOD MOOD</H1>
             <p style="width: 800px; font-family: 'Kelvinch',sans-serif;"> Aish restaurant, which lies within
               Hyderabad’s elegant Park Hotel, pays tribute to its ancient
@@ -107,7 +107,7 @@
 
           <center>
             <div class="container" style="border: 0px solid black;">
-              <center><img src="static/img/Agashiye-Restaurant-Ahmedabad-Gujarat.webp" width="700px " style="margin-top: 20px;">>
+              <center><img src="{% static 'img/5.webp' %}" width="700px " style="margin-top: 20px;">>
               </center>
               <H1>FOOD THAT MAKES YOU SAY WOW</H1>
               <p style="width: 800px; font-family: 'Kelvinch',sans-serif;">India seems to be a perfect
