--- a/Blogging/Templets/home.html
+++ b/Blogging/Templets/home.html
@@ -31,7 +31,7 @@
                 <li><a href="restaurant/">Restaurants</a></li>
                 <li><a href="food/">FOOD</a></li>
                 <li><a href="#">Drink</a></li>
-                <li><a href="#">About us</a></li>
+                <li><a href="about/">About us</a></li>
                 {% if user.is_authenticated %}
                 <!-- User is authenticated -->
                 <li><a href="Admin/">Welcome, {{ user.username }}</a></li>
