--- a/Blogging/Templets/home.html
+++ b/Blogging/Templets/home.html
@@ -17,6 +17,7 @@
   </head>
 
   <body>
+    
     <header>
       <div class="container text-center">
         <div class="row align-items-start">
@@ -30,7 +31,7 @@
               <ul>
                 <li><a href="restaurant/">Restaurants</a></li>
                 <li><a href="food/">FOOD</a></li>
-                <li><a href="#">Drink</a></li>
+                <li><a href="drink/">Drink</a></li>
                 <li><a href="about/">About us</a></li>
                 {% if user.is_authenticated %}
                 <!-- User is authenticated -->
@@ -48,6 +49,8 @@
         </div>
       </div>
     </header>
+    {% block body %}
+    
     <div class="top-image"></div>
     <div>
       <center>
@@ -266,6 +269,7 @@
     </div>
 
     <div class="bottom-image"></div>
+    {% endblock  %}
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
