--- a/Blogging/Templets/restricted.html
+++ b/Blogging/Templets/restricted.html
@@ -18,6 +18,14 @@
             <textarea id="id_description" name="description" required></textarea>
         </div>
         <div>
+            <label for="category">Category:</label>
+            <select name="category" id="category">
+                <option value="food">Food</option>
+                <option value="restaurant">Restaurant</option>
+                <option value="drink">Drink</option>
+            </select>
+        </div>
+        <div>
             <label for="id_date">Date:</label>
             <input type="date" id="id_date" name="date">
         </div>
