--- a/Blogging/Templets/home.html
+++ b/Blogging/Templets/home.html
@@ -29,13 +29,13 @@
           <div class="col">
             <nav>
               <ul>
-                <li><a href="restaurant/">Restaurants</a></li>
-                <li><a href="food/">FOOD</a></li>
-                <li><a href="drink/">Drink</a></li>
-                <li><a href="about/">About us</a></li>
+                <li><a href="/restaurant/">Restaurants</a></li>
+                <li><a href="/food/">FOOD</a></li>
+                <li><a href="/drink/">Drink</a></li>
+                <li><a href="/about/">About us</a></li>
                 {% if user.is_authenticated %}
                 <!-- User is authenticated -->
-                <li><a href="Admin/">Welcome, {{ user.username }}</a></li>
+                <li><a href="/Admin/">Welcome, {{ user.username }}</a></li>
                 
                 {% else %}
                 <!-- User is not authenticated -->
