--- a/Blogging/Templets/restricted.html
+++ b/Blogging/Templets/restricted.html
@@ -6,17 +6,23 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Create Article</h1>
+    <center><h1 style="font-style: italic;">Create Article</h1></center>
+    <center>
+    <center><div class="container" style="border:0px solid black ; width: 40%; margin-top: 12px; background-color:beige;
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
     <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
         <div>
             <label for="id_headline">Headline/Title:</label>
             <input type="text" id="id_headline" name="headline" required>
         </div>
+        <br>
         <div>
             <label for="id_description">Description:</label>
+            <br>
             <textarea id="id_description" name="description" required></textarea>
         </div>
+        <br>
         <div>
             <label for="category">Category:</label>
             <select name="category" id="category">
@@ -25,19 +31,25 @@
                 <option value="drink">Drink</option>
             </select>
         </div>
+        <br>
         <div>
             <label for="id_date">Date:</label>
             <input type="date" id="id_date" name="date">
         </div>
+        <br>
         <div>
             <label for="id_image_url">Image URL:</label>
             <input type="url" id="id_image_url" name="image_url">
         </div>
+        <br>
         <div>
             <label for="id_image">Upload Image:</label>
             <input type="file" id="id_image" name="image">
         </div>
+        <br>
         <button type="submit">Save</button>
     </form>
+</center>
+</center>
 </body>
 </html>
