--- a/Blogging/Templets/thali.html
+++ b/Blogging/Templets/thali.html
@@ -78,11 +78,9 @@
             </a>
         </h1>
         <p>
-            The Indian thali is a wholesome combination of colorful dishes served next to each other on a single plate. It is the perfect depiction of Indian cuisine. My thali meal ideas are utterly simple, nourishing, and full of flavors. 'Thali' is a Hindi word for a big, round plate on which food is served. Small eating bowls known as 'katori' are placed within the thali, each containing a dish. This whole platter is served as a set meal for lunch or dinner. The portion size of thali is sufficient for an individual.
+           {{i.description}}
         </p>
-        <p>
-            A thali meal is an age-old Indian tradition that is hard to find nowadays in modern families due to busy schedules. Still, there are many restaurants and food joints that serve these set meal platters with traditional Indian dishes.
-        </p>
+       
     </div>
 {% endfor %}
     <h1>COMMENT</h1>
